Reworked navigation and controls for painters

--- a/CanvasApp/CanvasApp.csproj
+++ b/CanvasApp/CanvasApp.csproj
@@ -88,6 +88,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="IMainWindowController.cs" />
+    <Compile Include="Model\ColorDescription.cs" />
+    <Compile Include="Model\LineWidthDescription.cs" />
+    <Compile Include="ViewModelBase.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -103,7 +107,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainWindowController.cs" />
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Model\CommandDescriptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
